--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
             "EcomDev\\AwesomeLayeredNavigation\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "EcomDev\\AwesomeLayeredNavigation\\": "tests/"
+        }
+    },
     "authors": [
         {
             "name": "Ivan Chepurnyi",
